
syntax = "proto3";
package payag;

service PayagService{
    rpc SayHello(HelloRequest) returns (HelloReply);
    rpc Chat(ChatQuery) returns (ChatResponse);
}

message HelloRequest{
    string name = 1;
}

message HelloReply{
    string message = 1;
}

message ChatQuery{
    string query = 1;
}
message ChatResponse{
    string answer = 1;
}